[gd_scene load_steps=12 format=3 uid="uid://cl8vj3l5bjkgl"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_fmkef"]
[ext_resource type="Texture2D" uid="uid://gld5ox3bwil8" path="res://assets/sprites/tankBody_green.png" id="1_oxmaw"]
[ext_resource type="Texture2D" uid="uid://b1xrllk08a7up" path="res://assets/sprites/tankGreen_barrel2.png" id="3_lc2kr"]
[ext_resource type="Script" path="res://scripts/components/health_component.gd" id="3_se7vu"]
[ext_resource type="Script" path="res://scripts/cannon.gd" id="4_uu6s0"]
[ext_resource type="Texture2D" uid="uid://crk0eavof52a2" path="res://assets/sprites/shotThin.png" id="5_svxv0"]
[ext_resource type="AudioStream" uid="uid://b5pijoufsqtlf" path="res://assets/sounds/cannon-shot.mp3" id="6_5ijdc"]
[ext_resource type="PackedScene" uid="uid://btl2sl18q3kim" path="res://scenes/components/damage_component.tscn" id="8_vn7wv"]
[ext_resource type="PackedScene" uid="uid://c53ceqo2jsme6" path="res://scenes/components/blink_component.tscn" id="9_hwix4"]
[ext_resource type="PackedScene" uid="uid://bjyq0ejhdcauw" path="res://scenes/health_bar.tscn" id="10_h14kn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wbr2p"]
size = Vector2(37, 36)

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(40, 37)
collision_mask = 2
script = ExtResource("1_fmkef")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 4.71239
texture = ExtResource("1_oxmaw")
script = ExtResource("3_se7vu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_wbr2p")

[node name="Cannon" type="Node2D" parent="."]
position = Vector2(-3, 0)
script = ExtResource("4_uu6s0")

[node name="Sprite2D" type="Sprite2D" parent="Cannon"]
texture_filter = 1
position = Vector2(10, 0)
rotation = 4.71239
texture = ExtResource("3_lc2kr")

[node name="Burst" type="Node2D" parent="Cannon"]
position = Vector2(37.4, 0)
rotation = -1.55508

[node name="Sprite2D" type="Sprite2D" parent="Cannon/Burst"]
texture_filter = 1
texture = ExtResource("5_svxv0")

[node name="CannonShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_5ijdc")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("3_se7vu")

[node name="DamageComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("8_vn7wv")]
health_component = NodePath("../HealthComponent")

[node name="BlinkComponent" parent="." instance=ExtResource("9_hwix4")]

[node name="HealthBar" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("10_h14kn")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -21.0
offset_right = 9.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.57047
size_flags_horizontal = 6
size_flags_vertical = 6
health_component = NodePath("../HealthComponent")

[connection signal="damaged" from="DamageComponent" to="." method="_on_damaged"]
[connection signal="died" from="DamageComponent" to="." method="_on_death"]
